--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "electron-is-dev": "^2.0.0",
-    "electron-localshortcut": "^3.2.1"
+    "electron-localshortcut": "^3.2.1",
+    "electron-rebuild": "^2.3.5",
+    "robotjs": "^0.6.0"
   }
 }
