--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
   },
   "devDependencies": {
     "electron": "^12.0.6",
-    "electron-builder": "^22.10.5"
+    "electron-builder": "^22.10.5",
+    "electron-rebuild": "^2.3.5"
   },
   "dependencies": {
     "@halobear/js-feedback": "^1.0.2",
     "electron-is-dev": "^2.0.0",
     "electron-localshortcut": "^3.2.1",
-    "electron-rebuild": "^2.3.5",
     "robotjs": "^0.6.0"
   }
 }
